Replaced Integer/Double/Long/... constructors by valueOf in comments